# me

./: README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
artifacts/: Heidegger: Being and Time  IMPLEMENTATION_SUMMARY.md  SUPERINTELLIGENCE_GAP_ANALYSIS.md  Schopenhauer: The World as Will and Idea
evals/: __init__.py  cli.py  framework.py  suites.py
evals/scenarios/: __init__.py  reasoning.py  self_model.py  task_completion.py  tool_use.py
me/: __init__.py  __main__.py  cli.py  tui.py
me/agent/: __init__.py  agent_dir.py  autonomy.py  body.py  body_vfs.py  causality.py  character.py  communication.py  consolidation.py  core.py  deep_learning.py  embodiment.py  eval_runner.py  evals.py  evolution.py  file_intercept.py  learning.py  mcp.py  memory.py  memory_systems.py  metacognition.py  models.py  planning.py  process.py  self_model.py  sensorium.py  skill_integration.py  skill_mcp.py  skills.py  strategic.py  tool_synthesis.py  unconscious.py  world_model.py
me/agent/skill_templates/: __init__.py
me/agent/skill_templates/templates/code-review/: SKILL.md
me/agent/skill_templates/templates/debugging/: SKILL.md
me/agent/skill_templates/templates/git-workflow/: SKILL.md
me/agent/skill_templates/templates/memory-management/: SKILL.md
tests/: conftest.py  test_agent_core.py  test_causality.py  test_communication.py  test_daemon_system.py  test_evals.py  test_learning.py  test_metacognition.py  test_model_providers.py  test_planning.py  test_semantic_routing.py  test_skills.py  test_world_model.py
