[project]
name = "me"
version = "0.1.0"
description = "Self-model agent: uploading 'me' into a computer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "strands-agents[anthropic,openai]>=0.1.0",
    "strands-agents-tools>=0.1.0",
    "numpy>=2.0.0",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",
    "click>=8.1.0",
    "psutil>=6.0.0",
    "watchdog>=4.0.0",
    "textual>=0.47.0",
    "rich>=13.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["me*"]
exclude = ["artifacts*", "tests*"]

[project.scripts]
me = "me.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "pyright>=1.1.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
]

[tool.ruff.lint.isort]
known-first-party = ["me"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = false
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
